# sweetbomb

./: .gitignore  CLAUDE.md  ENV_SETUP.md  IMPROVEMENTS.md  README.md  clean_remote_deploy.py  config.py  core_fix_remote.py  deploy_remote.py  ecosystem.config.cjs  final_fix_remote.py  fix_remote_deploy.py  install-service.sh  main.py  nohup.out  octomap_performance_report.txt  package-lock.json  portable_deploy.py  remote-start.sh  requirements.txt  reset_octomap.sh  run_performance_test.sh  setup_systemd.py  smart-home-dashboard.html  start-simple.sh  start.cjs  start_realsense_octomap.sh  sweetbomb-admin-frontend.service  sweetbomb-backend.service  sweetbomb-frontend.service  test_dynamic_mode.sh  test_oak_simple.py  test_realsense.py  test_tcp_send.py  test_tcp_server.py
.claude/: mcp.json  settings.json
data/: waypoints.json
deploy/: clean_remote_deploy.py  core_fix_remote.py  deploy_remote.py  final_fix_remote.py  fix_remote_deploy.py  portable_deploy.py  remote_check.py  setup_systemd.py  verify_nav.py
docs/: IMPROVEMENT_SUGGESTIONS.md  admin-frontend-architecture.md  behavior_tree_analysis_report.md  changelog.md  knowledge.md  pm2-setup.md  realsense-api-comparison.md  robot_communication_protocol.md  simplification_plan.md  simplified_architecture.md  spec.md
memory-bank/: architecture.md  progress.md  (+2 more)
src/octomap_web_viewer/: CMakeLists.txt  package.xml
src/octomap_web_viewer/launch/: rs_voxelizer.launch.py  web_viewer.launch.py
src/octomap_web_viewer/scripts/: pointcloud_voxelizer.py  start_web_server.py
src/octomap_web_viewer/tests/: test_voxelizer.py
src/octomap_web_viewer/web/: index.html
src/octomap_web_viewer/web/css/: style.css
src/octomap_web_viewer/web/js/: app.js  config.js  octomap_viewer.js
(+281 files in other folders)
